Fix overflow scroll on unit dropdown menu DAH-139 (#152)
* Initial unit dropdown styling

* Style updates for unit dropdown

* Fix disable styles for unit dropdown

* Fix overflow for unit dropdown

* Better style fix for unit dropdown

--- a/public/toolkit/styles/molecules/_dropdowns.scss
+++ b/public/toolkit/styles/molecules/_dropdowns.scss
@@ -45,6 +45,7 @@
 .dropdown-menu_item {
   @include dropdown-style;
   list-style: none;
+  margin: 0 !important;
 
   &.is {
     @each $color-name, $color-value in $state-colors {
@@ -151,5 +152,5 @@ button.dropdown-select {
 }
 
 .unit-dropdown__control {
-  border: none;
+  border: none !important;
 }
